--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
+.container {
+  max-width: 80%;
+  padding: 0 30px;
+  margin: 0 auto;
+  overflow: auto;
+}
+
+.btn-primary, .btn-secondary {
+  display: inline-block;
+  border-radius: 5px;
+  padding: 8px 20px;
+  margin: 3px;
+}
+
+.btn-primary:hover, .btn-secondary:hover {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+}
+
+.btn-primary {
+  background-color: #418bff;
+}
+
+.btn-secondary {
+  background-color: #ff8700;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -23,7 +50,7 @@ a {
 
 .showcase {
   background-color: #0e6cff;
-  color: #f4f4f4;
+  color: #ffff;
   height: 80%;
 }
 
@@ -83,11 +110,4 @@ a {
 .showcase-content p {
   margin: 20px 0;
   width: 60%;
-}
-
-.container {
-  max-width: 80%;
-  padding: 0 30px;
-  margin: 0 auto;
-  overflow: auto;
 }
